# home

./: .caprc  .gitauthors  .gitconfig  .irbrc  .profile  .pryrc  .robomongorc.js  docker-compose.yml  pyproject.toml
.config/kitty/: kitty.conf
.profile-modules/: load-active.sh
.profile-modules/active/: 99.git-prompt.sh  asdf.sh  aws-completer.sh  direnv.sh  docker-sync.sh  ibmcloud-autocompletion.sh  kitty-chdir-for-desktop.sh  knative.sh  kops-completion.sh  krew.sh  kubectl-plugins.sh  linuxbrew.sh  nvm.sh  pipenv.sh  powerline.sh  rbenv.sh  rvm.sh  z.sh
.profile-modules/modules/: aws-completer.sh  dart.sh  direnv.sh  git-prompt.sh  ibmcloud-autocompletion.sh  kitty-chdir-for-desktop.sh  knative.sh  kops-completion.sh  kubectl-plugins.sh  linuxbrew.sh  mouse-sensitivity.sh  nvm.sh  pipenv.sh  powerline.sh  rbenv.sh  z.sh
.ssh/: config
.subversion/: config
.subversion_IDEA/: config
