[project]
name = "fabiob-home"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "pandas-stubs==2.2.3.250527",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "types-lxml>=2025.3.30",
]

[tool.ruff]
line-length = 160
